--- a/limpa/templates/limpa/home.html
+++ b/limpa/templates/limpa/home.html
@@ -36,8 +36,8 @@
                     </button>
                 </form>
                 <p class="meta">
-                    <a href="https://duarteocarmo.com">By Duarte O.Carmo</a> |
-                    <a href="https://github.com/duarteocarmo/limpa">Source</a>
+                    <a href="https://duarteocarmo.com" target="_blank">By Duarte O.Carmo</a> |
+                    <a href="https://github.com/duarteocarmo/limpa" target="_blank">Source</a>
                 </p>
                 <hr>
                 <div id="podcast-list" class="podcast-list">
